# surf-scrap

./: .gitignore  LICENCE  Notebook.ipynb  README.md  dashboard_surf.Rmd  donnees_surf.csv  notebook2.ipynb  pyproject.toml  script_exec.py  surf.csv  test.csv  test.py
surf_scrap/: __init__.py
surf_scrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
