[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-scrap"
version = "0.1.0"
description = "Surf forecast web scraper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

authors = [
    { name = "Nercy & crenia" }
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/yourusername/surf-scrap"

# CLI command: surf-scrap URL OUTPUT_FILE
[project.scripts]
surf-scrap = "surf_scrap:cli"


